--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,9 @@
   "dependencies": {
     "modernizr": "~2.8.3",
     "angularjs": "~1.4.0",
-    "medium-editor": "~4.12.2"
+    "medium-editor": "~4.12.2",
+    "angular-sanitize": "~1.5.0",
+    "angular-moment": "~0.10.3",
+    "moment": "~2.11.2"
   }
 }
