--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "medium-editor": "~4.12.2",
     "angular-sanitize": "~1.5.0",
     "angular-moment": "~0.10.3",
-    "moment": "~2.11.2"
+    "moment": "~2.11.2",
+    "select2": "~4.0.3"
   }
 }
