--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "angular-sanitize": "~1.5.0",
     "angular-moment": "~0.10.3",
     "moment": "~2.11.2",
-    "select2": "~4.0.3"
+    "select2": "~4.0.3",
+    "angular-ui-select": "~0.19.8"
   }
 }
